--- a/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
@@ -477,6 +477,7 @@ p.img.toothimg05{
     background: #fff;
     margin-bottom: 12px;
     border: 1px solid #c9c9c9;
+    border-left: none;
     display: inline-block;
     text-align: left;
     cursor: pointer;
@@ -804,57 +805,57 @@ section.board-link {
 
 @media screen and (max-width: 640px) {
     .tab-contents5 .section05 .max-layout-width .text {
-    padding-top: 40px;
-}
+        padding-top: 40px;
+    }
     .section09 {
-    background: #f5f5f5;
-    padding-top: 55px;
-    padding-bottom: 25px;
-}
+        background: #f5f5f5;
+        padding-top: 55px;
+        padding-bottom: 25px;
+    }
     .section09 h2 {
-    font-size: 28px;
-    letter-spacing: -2px;
-    margin-bottom:-15px;
-}
+        font-size: 28px;
+        letter-spacing: -2px;
+        margin-bottom:-15px;
+    }
     .section08 {
-    margin-top: 60px;
-    padding-bottom: 35px;
-}
+        margin-top: 60px;
+        padding-bottom: 35px;
+    }
     section.section-top-title-left {
-    padding-bottom: 35px;
-}
+        padding-bottom: 35px;
+    }
 
     section.board-link {
-    margin-top: 50px;
-}
+        margin-top: 50px;
+    }
     .section10 {
-    margin-top: 55px;
-}
+        margin-top: 55px;
+    }
 
     .section06 {
-    margin-top: 56px;
-}
+        margin-top: 56px;
+    }
     section.list-content .section-text, section.list-content .pager {
-    font-size: 14px;
-    line-height: 1.2;
-}
+        font-size: 14px;
+        line-height: 1.2;
+    }
 
     .section04 {
-    margin-top: 50px;
-}
+        margin-top: 50px;
+    }
 
     .section03 .max-layout-width .con .img-box h2 {
-    margin: 20px 0;
-    font-size: 26px;
-}
+        margin: 20px 0;
+        font-size: 26px;
+    }
     .section02 {
-    text-align: center;
-    padding-top: 265px;
-}
+        text-align: center;
+        padding-top: 265px;
+    }
     section.section-top-title-left .image_box_left {
-    height: 220px;
-    bottom: -219px;
-}
+        height: 220px;
+        bottom: -219px;
+    }
     .section06 ul li p {
         font-size: 14px;
         margin-top: -12px;
@@ -963,6 +964,14 @@ section.board-link {
 }
 
 @media screen and (max-width: 414px) {
+    body .background-animation .max-layout-width .text {
+        padding: 53px 0 !important;;
+    }
+    body .background-animation {
+        height: auto;
+        box-sizing: border-box;
+        padding-bottom: 0;
+    }
     .img-right .max-layout-width .text {
         padding-top: 220px;
     }
@@ -1067,30 +1076,30 @@ section.board-link {
 
 @media screen and (max-width: 375px)  {
     .section08 .section-title {
-    line-height: 1.3;
-    margin-bottom: 6px;
-    padding-top: 66px;
-    font-size: 28px;
-}
+        line-height: 1.3;
+        margin-bottom: 6px;
+        padding-top: 66px;
+        font-size: 28px;
+    }
 
     .tab-contents4 .section05 .max-layout-width .text {
-    padding-top: 53px;
-}
-.section05 {
-    height: 228px;
-    padding-bottom: 128px;
-    margin-top: 49px;
-}
+        padding-top: 53px;
+    }
+    .section05 {
+        height: 228px;
+        padding-bottom: 128px;
+        margin-top: 49px;
+    }
 }
 
 
 
 @media screen and (max-width: 360px)  {
     .section05 {
-    height: 228px;
-    padding-bottom: 100px;
-    margin-top: 49px;
-}
+        height: 228px;
+        padding-bottom: 100px;
+        margin-top: 49px;
+    }
     .img-right .max-layout-width .text {
         padding-top: 200px;
     }
