--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -1256,6 +1256,9 @@ section.board-link ul li {
 }
 
 @media screen and (max-width: 414px) {
+    .mobile-display-none {
+        display: none;
+    }
 
     .treatment-case .left-img1 div.login {
         background: rgba(0,0,0,0.7);
