--- a/src/main/webapp/css/tooth/general.css
+++ b/src/main/webapp/css/tooth/general.css
@@ -2938,6 +2938,8 @@ section.board-link {
         font-size: 16px;
         padding: 12px 0;
         height: 43px;
+        line-height: 43px;
+        padding: 0;
     }
     .section03 .table td:first-child {
         font-size: 16px;
