--- a/src/main/webapp/css/board/boardCommn.css
+++ b/src/main/webapp/css/board/boardCommn.css
@@ -100,7 +100,7 @@
 
 @media screen and (max-width: 1300px) {
     .max-layout-width.mobile-full-width {
-        padding: 0 !important;
+        background: #f5f5f5;
     }
     .search .select-type {
         width: 100px;
